# librnn

./: CMakeLists.txt  Makefile.am  Makefile.in  README  README.txt  TODO  acinclude.m4  config.h  config.h.cmake  config.h.in  configure  configure.in
doc/: Doxyfile  roadmap.otl
doc/freemind/: libRNN.mm
doc/uml/: librnn-uml.dia
include/librnn/: AbstractNeuron.h  AbstractSynapse.h  Logger.hpp  Neuron.h  RNN_Matrix.h  RNN_Vector.h  RecurrentNeuralNetwork.h  Synapse.h  defines.h  globals.h  librnn.h  macros.h  transferfunctions.h
modules/: CMakeIncludeFiles.cmake  CMakeOSSpecifics.cmake  CMakeVersionConfig.cmake  CPackConfiguration.cmake  OutputConfiguration.cmake  SetMinGWOptions.cmake  SetOptions.cmake  SetTestingOptions.cmake
src/: CMakeLists.txt  Makefile.am  Makefile.in  Neuron.cpp  RecurrentNeuralNetwork.cpp  Synapse.cpp
src/matrix/: CMakeLists.txt  Neuron.cpp  RecurrentNeuralNetwork.cpp  Synapse.cpp
src/vector/: CMakeLists.txt  Neuron.cpp  RecurrentNeuralNetwork.cpp  Synapse.cpp
tests/: LibRnnTest.cpp  LibRnnTest.h  Makefile.am  Makefile.in  librnnRuntimeTestMain.cpp  librnnUnitTests.cpp  librnnUnitTests.h  librnnUnitTestsMain.cpp  timing.hpp
tests/matrix/: CMakeLists.txt
tests/vector/: CMakeLists.txt
trunk/: CMakeLists.txt  README.txt  TODO  aclocal.m4  config.h  config.h.cmake  config.h.in  configure  configure.in
trunk/doc/: roadmap.otl
trunk/doc/freemind/: libRNN.mm
trunk/doc/uml/: librnn-uml.dia
trunk/include/librnn/: AbstractNeuron.h  AbstractSynapse.h  Logger.hpp  Neuron.h  Neuron_Matrix.h  Neuron_Vector.h  RNN_Vector.h  RecurrentNeuralNetwork.h  Synapse.h  defines.h  librnn.h  macros.h  transferfunctions.h
trunk/modules/: CMakeIncludeFiles.cmake  CMakeOSSpecifics.cmake  CMakeVersionConfig.cmake  CPackConfiguration.cmake  ConfigFile.cmake  OutputConfiguration.cmake  SetDefaults.cmake  SetMinGWOptions.cmake  SetOptions.cmake  SetTestingOptions.cmake
trunk/src/: CMakeLists.txt  Makefile.am  Makefile.in  Neuron.cpp  RecurrentNeuralNetwork.cpp  Synapse.cpp
trunk/src/matrix/: Neuron.cpp  RecurrentNeuralNetwork.cpp  Synapse.cpp
trunk/src/vector/: CMakeLists.txt  Neuron.cpp  RecurrentNeuralNetwork.cpp  Synapse.cpp
trunk/tests/: CMakeLists.txt  LibRnnTest.cpp  LibRnnTest.h  Makefile.am  Makefile.in  librnnRuntimeTestMain.cpp  librnnUnitTests.cpp  librnnUnitTests.h  librnnUnitTestsMain.cpp  testMain.cpp  timing.hpp
trunk/tests/matrix/: CMakeLists.txt
trunk/tests/vector/: CMakeLists.txt
