
lib_LTLIBRARIES = librnn.la
librnn_la_SOURCES = \
										../include/librnn/AbstractSynapse.h \
										../include/librnn/AbstractNeuron.h \
										../include/librnn/Synapse.h \
										Synapse.cpp \
										../include/librnn/Neuron.h \
										Neuron.cpp \
										RecurrentNeuralNetwork.cpp \
										../include/librnn/RecurrentNeuralNetwork.h \
										../include/librnn/Logger.hpp
librnn_la_CPPFLAGS = -I../include 


